Implement /find and Client#find_by_uid
These are non-blocking versions of `/retrieve` and `Client#retrieve_by_uid`.
They return a response immediately and either give the full result (if
it is completed) or specify that the action is still pending.
